fix(posts): scrollbar border gap mis-alignment

--- a/src/components/messenger/feed/components/post-input/styles.scss
+++ b/src/components/messenger/feed/components/post-input/styles.scss
@@ -4,6 +4,7 @@
 
 .post-input-container {
   margin-top: 58px;
+  border-inline: 1px solid rgba(52, 56, 60);
 
   &__create-outer {
     display: flex;
